# AirConditionalSystem

./: README.md  Segmentação_por_Crescimento_de_Regiões_Parte_2_Algoritmos_Avançados.ipynb  Tutorial_Python_PDI.ipynb
Controller/: .directory  CMakeLists.txt  ClockCalendar.cpp  ClockCalendarRaspPico.cpp  ControlRaspPico.cpp  IOControl.cpp  IOControlRaspPico.cpp  IOControlRaspPico.h  ListRaspPico.cpp  ListRaspPico.h  NodeRaspPico.cpp  NodeRaspPico.h  libConfig.h  main.cpp  testControler.cpp
ExampleCplusplusESP/sample_project/: CMakeLists.txt  sdkconfig.old
ExampleCplusplusESP/sample_project/main/: CMakeLists.txt  FirstClassESP.cpp  FirstClassESP.h  main.cpp
SupervisorAndroid/SupervisorAndroid_v2/: settings.gradle
SupervisorAndroid/SupervisorAndroid_v2/app/: build.gradle
SupervisorAndroid/SupervisorAndroid_v2/app/src/androidTest/java/com/example/supervisorandroid_v2/: ExampleInstrumentedTest.java
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/: AndroidManifest.xml
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/cpp/: CMakeLists.txt  ControlSupervisor.cpp  ControlSupervisor.h  DataCommunication.cpp  DataCommunication.h  DataCommunicationAndroid.cpp  DataCommunicationAndroid.h  List.cpp  List.h  Node.cpp  Node.h  ProcessingDataList.cpp  ProcessingDataList.h  headers.h  libConfig.h  native-lib.cpp
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/java/com/example/supervisorandroid_v2/: MainActivity.java
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/res/layout/: activity_main.xml
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/res/values/: strings.xml  themes.xml
SupervisorAndroid/SupervisorAndroid_v2/app/src/main/res/values-night/: themes.xml
SupervisorAndroid/SupervisorAndroid_v2/app/src/test/java/com/example/supervisorandroid_v2/: ExampleUnitTest.java
SupervisorAndroid/SupervisorAndroid_v2/gradle/wrapper/: gradle-wrapper.properties
SupervisorLinux/: ControlSupervisor.cpp  ControlSupervisor.h  DataCommunication.cpp  DataCommunication.h  DataCommunicationLinux.cpp  DataCommunicationLinux.h  List.cpp  List.h  Node.cpp  Node.h  ProcessingDataList.cpp  ProcessingDataList.h  headers.h  libConfig.h  main.cpp  supervisor
